hphp/hack/test/typecheck/splat/splat_destructure_list.php.exp
File "splat_destructure_list.php", line 6, characters 8-12:
An array cannot be unpacked into the required arguments of a function (Typing[4359])
File "splat_destructure_list.php", line 3, characters 10-10:
Definition is here
File "splat_destructure_list.php", line 13, characters 9-13:
A function that receives an unpacked array as an argument must have a variadic parameter to accept the elements of the array (Typing[4359])
File "splat_destructure_list.php", line 10, characters 10-11:
Definition is here
File "splat_destructure_list.php", line 14, characters 9-16:
A function that receives an unpacked array as an argument must have a variadic parameter to accept the elements of the array (Typing[4359])
File "splat_destructure_list.php", line 10, characters 10-11:
Definition is here
